--- a/Proyecto2021/Proyecto2021.csproj
+++ b/Proyecto2021/Proyecto2021.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductoCompraController.cs" />
     <Compile Include="Controllers\ProductoController.cs" />
+    <Compile Include="Controllers\ProductoImagenController.cs" />
     <Compile Include="Controllers\ProveedorController.cs" />
     <Compile Include="Controllers\UsuarioController.cs" />
     <Compile Include="Global.asax.cs">
@@ -308,6 +309,10 @@
     <Content Include="Views\ProductoCompra\Edit.cshtml" />
     <Content Include="Views\ProductoCompra\Details.cshtml" />
     <Content Include="Views\ProductoCompra\Create.cshtml" />
+    <Content Include="Views\ProductoImagen\Index.cshtml" />
+    <Content Include="Views\ProductoImagen\Edit.cshtml" />
+    <Content Include="Views\ProductoImagen\Details.cshtml" />
+    <Content Include="Views\ProductoImagen\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
