--- a/Proyecto2021/Proyecto2021.csproj
+++ b/Proyecto2021/Proyecto2021.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Controllers\ProductoController.cs" />
     <Compile Include="Controllers\ProductoImagenController.cs" />
     <Compile Include="Controllers\ProveedorController.cs" />
+    <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Controllers\UsuarioController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -313,6 +314,7 @@
     <Content Include="Views\ProductoImagen\Edit.cshtml" />
     <Content Include="Views\ProductoImagen\Details.cshtml" />
     <Content Include="Views\ProductoImagen\Create.cshtml" />
+    <Content Include="Views\Roles\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
