Crud Usuario rol

--- a/Proyecto2021/Proyecto2021.csproj
+++ b/Proyecto2021/Proyecto2021.csproj
@@ -185,6 +185,7 @@
     <Compile Include="Controllers\ProveedorController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Controllers\UsuarioController.cs" />
+    <Compile Include="Controllers\UsuarioRolController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -315,6 +316,7 @@
     <Content Include="Views\ProductoImagen\Details.cshtml" />
     <Content Include="Views\ProductoImagen\Create.cshtml" />
     <Content Include="Views\Roles\Index.cshtml" />
+    <Content Include="Views\UsuarioRol\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
